# desktopTemplate

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: epic.yml  story.yml  task.yml
.github/workflows/: backend.yml  e2e.yml  frontend.yml
e2e/: playwright.config.ts  tsconfig.json
e2e/fixtures/: index.ts
e2e/pages/: home-page.ts
e2e/specs/: home.spec.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: greet.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  test_helpers.rs
src/app/routes/: home.tsx
src/components/layouts/: root-layout.test.tsx  root-layout.tsx
src/features/greet/hooks/: use-greet.ts
src/lib/: utils.ts
src/stores/: ui-store.ts
src/styles/: index.css
src/test/: setup.ts  test-utils.tsx
