[package]
name = "desktop-template"
version = "0.1.0"
edition = "2021"
description = "A Tauri 2 desktop application template"

[lib]
name = "desktop_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

# sqlx with SQLite. "migrate" embeds SQL files at compile time.
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
] }

[dev-dependencies]
mockall = "0.13"
proptest = "1"
